--- a/The Menagerie/The Menagerie/The Menagerie.vcxproj
+++ b/The Menagerie/The Menagerie/The Menagerie.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="AlienDataBase.c" />
     <ClCompile Include="AlienManager.c" />
     <ClCompile Include="Aquatic.c" />
+    <ClCompile Include="Crawler.c" />
     <ClCompile Include="Flying.c" />
     <ClCompile Include="Main.c" />
     <ClCompile Include="Manager.c" />
@@ -140,6 +141,7 @@
     <ClInclude Include="AlienDataBase.h" />
     <ClInclude Include="AlienManager.h" />
     <ClInclude Include="Aquatic.h" />
+    <ClInclude Include="Crawler.h" />
     <ClInclude Include="Flying.h" />
     <ClInclude Include="Manager.h" />
     <ClInclude Include="AlienVisuals.h" />
