--- a/The Menagerie/The Menagerie/The Menagerie.vcxproj.filters
+++ b/The Menagerie/The Menagerie/The Menagerie.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="Aquatic.c">
       <Filter>Source Files\Alien</Filter>
     </ClCompile>
+    <ClCompile Include="Crawler.c">
+      <Filter>Source Files\Alien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Manager.h">
@@ -63,6 +66,9 @@
       <Filter>Header Files\Alien</Filter>
     </ClInclude>
     <ClInclude Include="Aquatic.h">
+      <Filter>Header Files\Alien</Filter>
+    </ClInclude>
+    <ClInclude Include="Crawler.h">
       <Filter>Header Files\Alien</Filter>
     </ClInclude>
   </ItemGroup>
