--- a/The Menagerie/The Menagerie/The Menagerie.vcxproj
+++ b/The Menagerie/The Menagerie/The Menagerie.vcxproj
@@ -135,10 +135,12 @@
     <ClCompile Include="flying.c" />
     <ClCompile Include="gas_based.c" />
     <ClCompile Include="glowing.c" />
-    <ClCompile Include="Main.c" />
-    <ClCompile Include="Manager.c" />
+    <ClCompile Include="main.c" />
+    <ClCompile Include="manager.c" />
     <ClCompile Include="alien_visuals.c" />
     <ClCompile Include="rocky.c" />
+    <ClCompile Include="time.c" />
+    <ClCompile Include="visuals.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="alien.h" />
@@ -150,9 +152,11 @@
     <ClInclude Include="flying.h" />
     <ClInclude Include="gas_based.h" />
     <ClInclude Include="glowing.h" />
-    <ClInclude Include="Manager.h" />
+    <ClInclude Include="manager.h" />
     <ClInclude Include="alien_visuals.h" />
     <ClInclude Include="rocky.h" />
+    <ClInclude Include="time.h" />
+    <ClInclude Include="visuals.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
