--- a/The Menagerie/The Menagerie/The Menagerie.vcxproj
+++ b/The Menagerie/The Menagerie/The Menagerie.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="main.c" />
     <ClCompile Include="manager.c" />
     <ClCompile Include="alien_visuals.c" />
+    <ClCompile Include="print_alien_card.c" />
     <ClCompile Include="print_menu.c" />
     <ClCompile Include="rocky.c" />
     <ClCompile Include="time.c" />
@@ -155,6 +156,7 @@
     <ClInclude Include="glowing.h" />
     <ClInclude Include="manager.h" />
     <ClInclude Include="alien_visuals.h" />
+    <ClInclude Include="print_alien_card.h" />
     <ClInclude Include="print_menu.h" />
     <ClInclude Include="rocky.h" />
     <ClInclude Include="alien_species.h" />
