add input keyboard

--- a/The Menagerie/The Menagerie/The Menagerie.vcxproj
+++ b/The Menagerie/The Menagerie/The Menagerie.vcxproj
@@ -135,10 +135,13 @@
     <ClCompile Include="flying.c" />
     <ClCompile Include="gas_based.c" />
     <ClCompile Include="glowing.c" />
-    <ClCompile Include="keyboard_input.c" />
+    <ClCompile Include="input_keyboard.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="manager.c" />
     <ClCompile Include="alien_visuals.c" />
+    <ClCompile Include="menu_option.c" />
+    <ClCompile Include="planet_data_base.c" />
+    <ClCompile Include="planet_manager.c" />
     <ClCompile Include="print_alien_card.c" />
     <ClCompile Include="print_menu.c" />
     <ClCompile Include="rocky.c" />
@@ -156,9 +159,13 @@
     <ClInclude Include="flying.h" />
     <ClInclude Include="gas_based.h" />
     <ClInclude Include="glowing.h" />
+    <ClInclude Include="input_keyboard.h" />
     <ClInclude Include="manager.h" />
     <ClInclude Include="alien_visuals.h" />
+    <ClInclude Include="menu_option.h" />
     <ClInclude Include="planet.h" />
+    <ClInclude Include="planet_data_base.h" />
+    <ClInclude Include="planet_manager.h" />
     <ClInclude Include="planet_struct.h" />
     <ClInclude Include="print_alien_card.h" />
     <ClInclude Include="print_menu.h" />
