--- a/The Menagerie/The Menagerie/The Menagerie.vcxproj.filters
+++ b/The Menagerie/The Menagerie/The Menagerie.vcxproj.filters
@@ -87,7 +87,7 @@
     <ClCompile Include="input_keyboard.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="menu_option.c">
+    <ClCompile Include="menu_option_data_base.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -143,7 +143,7 @@
     <ClInclude Include="input_keyboard.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="menu_option.h">
+    <ClInclude Include="menu_option_data_base.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="alien_folder.h">
