--- a/The Menagerie/The Menagerie/The Menagerie.vcxproj
+++ b/The Menagerie/The Menagerie/The Menagerie.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="planet_visuals.c" />
     <ClCompile Include="rocky.c" />
     <ClCompile Include="core_visuals.c" />
+    <ClCompile Include="save_load_data.c" />
     <ClCompile Include="zoo.c" />
   </ItemGroup>
   <ItemGroup>
@@ -172,6 +173,7 @@
     <ClInclude Include="planet_struct.h" />
     <ClInclude Include="planet_visuals.h" />
     <ClInclude Include="rocky.h" />
+    <ClInclude Include="save_load_data.h" />
     <ClInclude Include="species_folder.h" />
     <ClInclude Include="core_visuals.h" />
     <ClInclude Include="visuals_folder.h" />
